# sdxl-dora-trainer

./: .gitignore  BLACK_IMAGE_FIX.md  CHANGELOG.md  LICENSE  README.md  batch_train.py  config.yaml  config_manager.py  debug_dora_weights.py  examples.py  inference.py  pyproject.toml  requirements-dev.txt  requirements.txt  sdxl_dora_trainer.py  setup.cfg  setup.py  test_device_allocation.py  test_dspo_imports.py  test_import.py  test_vae_encoding.py  utils.py  validate_dataset.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
diffusion_rlhf/: COMPLETE_WORKFLOW_GUIDE.md  DORA_DSPO_GUIDE.md  H100_PRODUCTION_READY.md  MULTIHEAD_TRAINING.md  MULTIMODAL_TRAINING.md  MULTI_GPU_GUIDE.md  Makefile  README.md  REWARD_MODEL_IMPROVEMENTS.md  SUPERVISED_DORA_GUIDE.md  pyproject.toml  requirements.txt  run_full_enhanced_training.bat  run_full_enhanced_training.sh  run_supervised_dora_training.ps1  run_supervised_dora_training.sh  simple_dora_dspo.py  test_multimodal_fix.py  test_path.py  verify_setup.py
diffusion_rlhf/data/: generated.csv  prompts_cordeliers.csv  prompts_example.csv
diffusion_rlhf/data/annotations/: .~lock.multihead_ratings.csv#  multihead_ratings.csv  multihead_ratings_sample.csv  pairs.jsonl  ratings.csv
diffusion_rlhf/dspo/: __init__.py  datasets.py  enhanced_multimodal_reward.py  multihead_dataset.py  multimodal_datasets.py  multimodal_reward.py  reward.py  trained_reward_model.py  tuner.py
diffusion_rlhf/scripts/: build_pairs.py  example_multimodal_training.py  generate_dual_gpu.py  generate_images.py  generate_images_dataparallel.py  generate_images_multi_gpu.py  quick_start_dora_dspo.py  quick_start_improved_training.py  sweep_dspo_optuna.py  test_device_fix.py  test_dual_gpu_fix.py  train_dora_vitraux.py  train_dspo.py  train_dspo_enhanced.py  train_dspo_with_dora.py  train_enhanced_multimodal_reward.py  train_multimodal_reward.py  train_reward.py  train_small_dataset.py
diffusion_rlhf/tests/: test_dspo.py
docs/: API.md  CONTRIBUTING.md  INSTALLATION.md
examples/: advanced_config.yaml  basic_config.yaml  inference_example.py  memory_optimized_config.yaml  train_example.py
scripts/: batch_train_fixed.py  batch_train_new.py  fix_dora_weights.py  simple_dora_dspo.py
tests/: test_sdxl_simple.py  test_setup.py
