[metadata]
name = sdxl-dora-trainer
version = 1.0.0
author = SDXL DoRA Trainer Contributors
author_email = lechenadece@gmail.com
description = Production-ready tool for fine-tuning SDXL models using DoRA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ElouarnLC/sdxl-dora-trainer
project_urls =
    Bug Tracker = https://github.com/ElouarnLC/sdxl-dora-trainer/issues
    Documentation = https://github.com/ElouarnLC/sdxl-dora-trainer/docs
    Source = https://github.com/ElouarnLC/sdxl-dora-trainer
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch>=2.0.0
    torchvision>=0.15.0
    torchaudio>=2.0.0
    diffusers>=0.24.0
    transformers>=4.35.0
    accelerate>=0.24.0
    peft>=0.6.0
    safetensors>=0.4.0
    Pillow>=9.0.0
    numpy>=1.21.0
    rich>=13.0.0
    wandb>=0.15.0
    tensorboard>=2.14.0
    pyyaml>=6.0.0
    tqdm>=4.64.0

[options.packages.find]
exclude =
    tests*
    docs*
    examples*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    flake8>=6.0.0
    isort>=5.12.0
    mypy>=1.0.0
docs =
    sphinx>=6.0.0
    sphinx-rtd-theme>=1.2.0
all =
    %(dev)s
    %(docs)s

[options.entry_points]
console_scripts =
    sdxl-dora-train = sdxl_dora_trainer:main
    sdxl-dora-infer = inference:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --strict-markers
    --disable-warnings
    --cov=sdxl_dora_trainer
    --cov-report=term-missing
    --cov-report=html

[coverage:run]
source = .
omit = 
    tests/*
    setup.py
    docs/*
    examples/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    docs/,
    build/,
    dist/,
    .eggs/,
    *.egg-info/,
    .tox/,
    .coverage,
    .coverage.*,
    .cache,
    .pytest_cache/

[isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = sdxl_dora_trainer

[mypy]
python_version = 3.8
strict = True
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
